# underworld2

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .readthedocs.yml  .zenodo.json  CHANGES.md  COMPILE.md  CONTRIBUTING.rst  Dockerfile  Installation.rst  LICENSE.md  MANIFEST.in  PRIVACY.md  README.md  clean.sh  jenkinsfile  pyproject.toml  requirements.txt  setup.py  test_basic.sh  test_long.sh  updatePyPath.sh  workingRotationMatrix.ipynb
libUnderworld/gLucifer/Viewer/cave/: CMakeLists.txt  LavaVR.cpp  clean-build.sh  init.py
src/underworld/libUnderworld/: CMakeLists.txt
src/underworld/libUnderworld/PICellerator/PopulationControl/: CMakeLists.txt
src/underworld/libUnderworld/PICellerator/Utils/: CMakeLists.txt
src/underworld/libUnderworld/Solvers/KSPSolvers/: CMakeLists.txt
src/underworld/libUnderworld/Solvers/libSolvers/: CMakeLists.txt
src/underworld/libUnderworld/StGermain/Base/: CMakeLists.txt
src/underworld/libUnderworld/StGermain/libStGermain/: CMakeLists.txt
src/underworld/libUnderworld/StGermain/pcu/: CMakeLists.txt
src/underworld/libUnderworld/StgDomain/Geometry/: CMakeLists.txt
src/underworld/libUnderworld/StgDomain/Mesh/: CMakeLists.txt
src/underworld/libUnderworld/StgDomain/Shape/: CMakeLists.txt
src/underworld/libUnderworld/StgDomain/libStgDomain/: CMakeLists.txt
src/underworld/libUnderworld/StgFEM/Assembly/: CMakeLists.txt
src/underworld/libUnderworld/StgFEM/Discretisation/: CMakeLists.txt
src/underworld/libUnderworld/StgFEM/SLE/: CMakeLists.txt
src/underworld/libUnderworld/StgFEM/Utils/: CMakeLists.txt
src/underworld/libUnderworld/StgFEM/libStgFEM/: CMakeLists.txt
src/underworld/libUnderworld/gLucifer/DrawingObjects/: CMakeLists.txt
src/underworld/libUnderworld/gLucifer/SysTest/: lucContourTest.xml  lucFeVariableSurfaceTest.xml  lucSwarmShapesTest.xml  lucSwarmVectorsTest.xml
src/underworld/libUnderworld/gLucifer/libgLucifer/: CMakeLists.txt
src/underworld/libUnderworld/libUnderworldPy/: CMakeLists.txt  Function.i  Spherical.i  StGermain.i  StGermain_Tools.i  StgDomain_Typemaps.i  StgFEM.i  Underworld.i  numpy.i
underworld/libUnderworld/: CMakeLists.txt  SConfigure  SConstruct  compile.py  configure.py  fast-scons.sh
underworld/libUnderworld/PICellerator/MaterialPoints/: CMakeLists.txt
underworld/libUnderworld/PICellerator/MaterialPoints/src/: CoincidentMapper.c  Finalise.c  Finalise.h  Init.c  Init.h  IntegrationPointsSwarm.c  IntegrationPointsSwarm.h  PICelleratorContext.c  PeriodicBoundariesManager.h  SwarmAdvector.c  SwarmAdvector.h  SwarmMap.c  types.h
underworld/libUnderworld/PICellerator/MaterialPoints/tests/: PeriodicBoundariesManagerSuite.c
underworld/libUnderworld/PICellerator/PopulationControl/src/: EscapedRoutine.c  Finalise.c  Finalise.h  Init.c  PopulationControl.h  types.h
underworld/libUnderworld/PICellerator/PopulationControl/tests/: EscapedRoutineSuite.c
underworld/libUnderworld/PICellerator/Utils/src/: Finalise.c  Init.c  PCDVC.c  Utils.h  types.h
underworld/libUnderworld/PICellerator/Utils/tests/: PCDVCSuite.c  PCDVCSuite.h
underworld/libUnderworld/PICellerator/Weights/: CMakeLists.txt
underworld/libUnderworld/PICellerator/Weights/src/: DVCWeights.c  Finalise.c  Finalise.h  Init.c  Init.h  WeightsCalculator.c  WeightsCalculator.h
underworld/libUnderworld/PICellerator/Weights/tests/: ConstantWeightsSuite.h  DVCWeightsSuite.c  DVCWeightsSuite.h  IterativeWeightsSuite.c  MomentBalanceWeightsSuite.c  MomentBalanceWeightsSuite.h
underworld/libUnderworld/PICellerator/libPICellerator/: CMakeLists.txt
underworld/libUnderworld/PICellerator/libPICellerator/Toolbox/: Toolbox.c  Toolbox.h
underworld/libUnderworld/PICellerator/libPICellerator/src/: Finalise.c  Finalise.h  Init.c  Init.h  PICellerator.h
underworld/libUnderworld/Solvers/: SConscript  SConstruct
underworld/libUnderworld/Solvers/Assembly/: CMakeLists.txt
underworld/libUnderworld/Solvers/SLE/: CMakeLists.txt
underworld/libUnderworld/StGermain/: .cvsignore  SConscript
underworld/libUnderworld/StGermain/Utils/: CMakeLists.txt
underworld/libUnderworld/StGermain/src/: main.c
underworld/libUnderworld/StgDomain/: SConscript  SConstruct
underworld/libUnderworld/StgDomain/Swarm/: CMakeLists.txt
underworld/libUnderworld/StgDomain/Utils/: CMakeLists.txt
underworld/libUnderworld/StgFEM/: SConstruct
underworld/libUnderworld/Underworld/Function/: CMakeLists.txt
underworld/libUnderworld/Underworld/Rheology/: CMakeLists.txt
underworld/libUnderworld/Underworld/Utils/: CMakeLists.txt
underworld/libUnderworld/Underworld/libUnderworld/: CMakeLists.txt
underworld/libUnderworld/config/: __init__.py  cc.py  config.py
underworld/libUnderworld/config/utils/: command.py  conv.py  format.py  ilog.py  options.py  path.py  perm.py  test_macro.py  test_options.py  test_path.py  test_perm.py
underworld/libUnderworld/gLucifer/: SConscript
underworld/libUnderworld/gLucifer/Base/: CMakeLists.txt
underworld/libUnderworld/gLucifer/ModelComponents/: window.xml
underworld/libUnderworld/gLucifer/SysTest/: Bathymetry.ppm  lucEigenvectorsCrossSectionTest.xml  lucIsosurfaceTest.xml  lucPlotTest.xml  lucScalarFieldOnMeshCrossSectionTest.xml  lucScalarFieldOnMeshTest.xml  lucScalarFieldTest.xml  lucSwarmRGBColourViewerTest.xml  lucSwarmViewerTest.xml  lucTextureTest.xml  lucVectorArrowCrossSectionTest.xml  lucVectorArrowsTest.xml  testBaseRayTay2d.xml  testBaseRayTay3d.xml  testDrawingObjects2d.xml  testDrawingObjects3d.xml  testLuc.py  testVis.xml
underworld/libUnderworld/libUnderworldPy/: CMakeLists.txt  Function.i  PICellerator.i  SConscript  Solvers.i  Spherical.i  StGermain.i  StGermain_Tools.c  StGermain_Tools.h  StGermain_Tools.i  StGermain_Typemaps.i  StgDomain.i  StgDomain_Typemaps.i  StgFEM.i  Underworld.i  __init__.py  c_arrays.i  c_pointers.i  gLucifer.i  petsc.i
underworld/libUnderworld/script/: btAll.py  dist.py  gdbAll.py  gdbbt.sh  nbstripout.py  precommit.py
underworld/libUnderworld/script/tauCallGraph/: addscript.pl  creategraph.sh  getmain.pl  tauSetup.txt
(+3386 files in other folders)
